<resources>
    <string name="app_name">COVID-19</string>
    <string name="covid_19">COVID-19</string>
    <string name="symptoms">Symptoms</string>
    <string name="information">Information</string>
    <string name="sources">Sources</string>
    <string name="travel_history">Travel History</string>
    <string name="call_helpline">Call Helpline</string>
    <string name="news">News</string>
    <string name="stats">Stats</string>
    <string name="prevention">Prevention-Symptoms </string>
    <string name="coronavirus_disease_2019_covid_19_is_an_infectious_disease_caused_by_severe_acute_respiratory_syndrome_coronavirus_2_sars_cov_2_it_was_first_identified_in_december_2019_in_wuhan_hubei_china_and_has_resulted_in_an_ongoing_pandemic_the_first_confirmed_case_has_been_traced_back_to_17_november_2019_in_hubei_as_of_25_july_2020_more_than_15_7_million_cases_have_been_reported_across_188_countries_and_territories_resulting_in_more_than_639_000_deaths_more_than_9_05_million_people_have_recovered">Coronavirus disease 2019 (COVID-19) is an infectious disease caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). It was first identified in December 2019 in Wuhan, Hubei, China, and has resulted in an ongoing pandemic. The first confirmed case has been traced back to 17 November 2019 in Hubei. As of 25 July 2020, more than 15.7 million cases have been reported across 188 countries and territories, resulting in more than 639,000 deaths. More than 9.05 million people have recovered.</string>
    <string name="t1">TODO</string>

    <string name="the_virus_that_causes_covid_19_is_mainly_transmitted_through_droplets_generated_when_an_infected_person_coughs_sneezes_or_exhales_these_droplets_are_too_heavy_to_hang_in_the_air_and_quickly_fall_on_floors_or_surfaces_you_can_be_infected_by_breathing_in_the_virus_if_you_are_within_close_proximity_of_someone_who_has_covid_19_or_by_touching_a_contaminated_surface_and_then_your_eyes_nose_or_mouth">The virus that causes COVID-19 is mainly transmitted through droplets generated when an infected person coughs, sneezes, or exhales. These droplets are too heavy to hang in the air, and quickly fall on floors or surfaces. You can be infected by breathing in the virus if you are within close proximity of someone who has COVID-19, or by touching a contaminated surface and then your eyes, nose or mouth.</string>

    <string name="most_common_symptoms_nfever_ndry_cough_ntiredness_n_nless_common_symptoms_naches_and_pains_nsore_throat_ndiarrhoea_nconjunctivitis_nheadache_nloss_of_taste_or_smell_na_rash_on_skin_or_discolouration_of_fingers_or_toes">Most common symptoms: \nfever \ndry cough \ntiredness\n \nLess common symptoms: \naches and pains \nsore throat \ndiarrhoea \nconjunctivitis \nheadache \nloss of taste or smell \na rash on skin, or discolouration of fingers or toes\n\nTo prevent the spread of COVID-19:
Clean your hands often\nUse soap and water/sanitizer\nMaintain a safe distance from anyone who is coughing or sneezing\nWear a mask when physical distancing is not possible\nDon’t touch your eyes, nose or mouth\nCover your nose and mouth with your bent elbow or a tissue when you cough or sneeze\nStay home if you feel unwell\nIf you have a fever, cough and difficulty breathing, seek medical attention\nCalling in advance allows your healthcare provider to quickly direct you to the right health facility\nThis protects you, and prevents the spread of viruses and other infections\nMasks can help prevent the spread of the virus from the person wearing the mask to others\nMasks alone do not protect against COVID-19, and should be combined with physical distancing and hand hygiene\n Follow the advice provided by your local health authority</string>
    <string name="textview">TextView</string>
    <string name="hello">Most common symptoms:\n fever\n dry cough\n tiredness\n\n Less common symptoms:\n aches and pains\n sore throat\n diarrhoea\n conjunctivitis\n headache\n loss of taste or smell\n a rash on skin, or discolouration of fingers or toes\n\n\n To prevent the spread of COVID-19:\n Clean your hands often. Use soap and water, or an alcohol-based hand rub.\n Maintain a safe distance from anyone who is coughing or sneezing.\n Wear a mask when physical distancing is not possible.\n Don’t touch your eyes, nose or mouth.\n Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.\n Stay home if you feel unwell.\n If you have a fever, cough and difficulty breathing, seek medical attention.\n Calling in advance allows your healthcare provider to quickly direct you to the right health facility. This protects you, and prevents the spread of viruses and other infections. \nMasks\n Masks can help prevent the spread of the virus from the person wearing the mask to others.\n Masks alone do not protect against COVID-19, and should be combined with physical distancing and hand hygiene. Follow the advice provided by your local health authority.</string>
    <string name="todo1">TODO</string>
    <string name="world_cases">More Info: World Cases</string>
    <string name="india_cases">More Info: India Cases</string>
    <string name="todo11">TODO</string>
    <string name="total_tests">Total Tests</string>

    <string name="critical">Critical</string>

    <string name="today_deaths">Today Deaths</string>

    <string name="today_cases">Today cases</string>
    <string name="worls_stats">Worlds Cases</string>
    <string name="_20" />
    <string name="ahmednagar">as</string>
    <string name="confirmed_covid_19_cases">Confirmed Covid-19 Cases</string>
    <string name="no_cases">No Cases</string>
    <string name="updated_a_second_ago">Updated a second ago ....</string>
    <string name="city_name_with_first_letter_capital"> Keep first letter Capital</string>
    <string name="name">Name</string>
    <string name="enter_the_city">Enter the Country</string>
    <string name="todo111">TODO</string>
    <string name="show">Show</string>
    <string name="enter_the_city1">Enter the City</string>
    <string name="state_wise1">State-Wise</string>
    <string name="india_district_wise">India District Wise</string>
    <string name="india_state_wise">India State Wise</string>
    <string name="active">Active</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="to14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="loading">Loading...</string>
    <string name="death_rate">Death Rate</string>
    <string name="active_rate">Active Rate</string>
    <string name="recovered_rate">Recovered Rate</string>
    <string name="keep_first_letter_capital">Keep first letter capital</string>
    <string name="go">Go</string>
    <string name="enter_the_district">Enter The District</string>
    <string name="enter_the_state">Enter the State</string>
    <string name="helpline_info">HelpLine Info:</string>
    <string name="dial">Dial</string>
    <string name="made_by">Made By:</string>
    <string name="pavika_chaudhary">Pavika Chaudhary</string>
    <string name="todo">TODO</string>
</resources>