<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity6">

    <LinearLayout style="@style/ghdg">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo11"
            app:srcCompat="@drawable/vggvg" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="448dp"
            android:background="#F0050505"
            android:text="@string/worls_stats"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#FFFEFE"
            android:textSize="28sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/corners"
        android:backgroundTint="#E57373"
        android:onClick="world"
        android:textStyle="bold"
        android:text="@string/world_cases" />

    <Button
        android:id="@+id/button1"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="53dp"
        android:background="@drawable/corners"
        android:backgroundTint="#E57373"
        android:onClick="India1"
        android:text="@string/india_state_wise"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="185dp"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/corners"
        android:backgroundTint="#E57373"
        android:onClick="India"
        android:textStyle="bold"
        android:text="@string/india_district_wise" />

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="294dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="174dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updated_a_second_ago"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B9000000"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/today_cases"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B9000000"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/deaths"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B9000000"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/today_deaths"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B9000000"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/active"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="175dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B9000000"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/critical"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B9000000"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/recovered"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView38"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B9000000"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/total_tests"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>