<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/b1"
        android:layout_width="164dp"
        android:layout_height="158dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="570dp"
        android:background="#000000"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/b1" />

    <ImageButton
        android:id="@+id/b2"
        android:layout_width="156dp"
        android:layout_height="153dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="569dp"
        android:background="#070707"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/b2" />

    <ImageButton
        android:id="@+id/b3"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="441dp"
        android:background="#070707"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/b3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="373dp"
        android:text="@string/covid_19"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/b4"
        android:layout_width="159dp"
        android:layout_height="142dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="396dp"
        android:background="#040303"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/b4" />

    <ImageButton
        android:id="@+id/b5"
        android:layout_width="215dp"
        android:layout_height="172dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="196dp"
        android:background="#020202"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/b1" />

    <ImageButton
        android:id="@+id/b6"
        android:layout_width="151dp"
        android:layout_height="146dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="172dp"
        android:background="#040404"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/b2" />

    <ImageButton
        android:id="@+id/b7"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="10dp"
        android:background="#040404"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/b4" />

    <ImageButton
        android:id="@+id/b8"
        android:layout_width="153dp"
        android:layout_height="162dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="29dp"
        android:background="#020202"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/b3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="560dp"
        android:text="@string/information"
        android:textColor="#FAF7F7"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="568dp"
        android:text="@string/sources"
        android:textColor="#FDFCFC"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="89dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="385dp"
        android:text="@string/prevention"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="432dp"
        android:text="@string/stats"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="270dp"
        android:text="@string/news"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="247dp"
        android:layout_marginBottom="106dp"
        android:text="@string/call_helpline"
        android:textColor="#F8F2F2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:text="@string/travel_history"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>