<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/img4" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#7986CB"
            android:text="@string/prevention"
            android:textAlignment="center"
            android:textColor="#F1EBEB"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="651dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="44dp"
          android:text="@string/most_common_symptoms_nfever_ndry_cough_ntiredness_n_nless_common_symptoms_naches_and_pains_nsore_throat_ndiarrhoea_nconjunctivitis_nheadache_nloss_of_taste_or_smell_na_rash_on_skin_or_discolouration_of_fingers_or_toes"
            android:textColor="#020202" />

        <WebView
            android:layout_width="match_parent"
            android:layout_marginStart="40dp"
            android:id="@+id/Web1"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="30dp"
            android:layout_height="216dp" />
    </LinearLayout>

</ScrollView>
