<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="121dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="607dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img1"
        android:contentDescription="@string/t1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="567dp"
        android:background="#EA9B9B"
        android:text="@string/information"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="339dp"
        android:layout_height="233dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="21dp"
        android:background="#DCFFFFFF"
        android:lineSpacingExtra="0sp"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:text="@string/coronavirus_disease_2019_covid_19_is_an_infectious_disease_caused_by_severe_acute_respiratory_syndrome_coronavirus_2_sars_cov_2_it_was_first_identified_in_december_2019_in_wuhan_hubei_china_and_has_resulted_in_an_ongoing_pandemic_the_first_confirmed_case_has_been_traced_back_to_17_november_2019_in_hubei_as_of_25_july_2020_more_than_15_7_million_cases_have_been_reported_across_188_countries_and_territories_resulting_in_more_than_639_000_deaths_more_than_9_05_million_people_have_recovered"
        android:textAlignment="inherit"
        android:textAllCaps="false"
        android:textColor="#0E0E0E"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="345dp"
        android:layout_height="200dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>